--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -14,32 +14,29 @@ categories = ["wasm"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-config = { path = "../config", version = "0.3.0" }
-bulwark-wasm-host = { path = "../wasm-host", version = "0.3.0" }
-bulwark-wasm-sdk = { path = "../wasm-sdk", version = "0.3.0" }
+bulwark-config = { workspace = true }
+bulwark-wasm-host = { workspace = true }
+bulwark-wasm-sdk = { workspace = true }
+
+envoy-control-plane = { workspace = true }
+futures = { workspace = true }
+http = { workspace = true }
+metrics = { workspace = true }
+r2d2 = { workspace = true }
+redis = { workspace = true }
+reqwest = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tonic = { workspace = true }
+tracing = { workspace = true }
+
 bytes = "1"
-envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
-futures = "0.3"
+forwarded-header-value = "0.1.1"
 json = "0.12.4"
+matchit = "0.7.0"
 prost = "0.12"
 prost-wkt = "=0.3.0"
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-tonic = "=0.6.2"
-http = "0.2"
-thiserror = "1.0.37"
-matchit = "0.7.0"
 sfv = "0.9.2"
-tracing = "0.1.37"
-redis = { version = "0.23.0", features = [
-    "tokio-comp",
-    "tokio-native-tls-comp",
-    "cluster",
-    "r2d2",
-] }
-r2d2 = "0.8.10"
-forwarded-header-value = "0.1.1"
-metrics = "0.21.1"
-reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
 
 [build-dependencies]
 # This dependency declaration and the other prost dependencies above prevent `cargo update`
