--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -14,16 +14,16 @@ categories = ["wasm"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-decision = { path = "../decision", version = "0.3.0" }
-bulwark-wasm-sdk-macros = { path = "../wasm-sdk-macros", version = "0.3.0" }
-thiserror = "1.0.37"
-anyhow = "1"
-http = "0.2"
-validator = { version = "0.16" }
-approx = "0.5"
-wit-bindgen = "0.7.0"
-serde_json = "1.0.93"
-proc-macro2 = "1.0.59"
+bulwark-decision = { workspace = true }
+bulwark-wasm-sdk-macros = { workspace = true }
+
+wit-bindgen = { workspace = true }
+
+anyhow = { workspace = true }
+http = { workspace = true }
+serde_json = { workspace = true }
+thiserror = { workspace = true }
+validator = { workspace = true }
 
 [dev-dependencies]
 cfg-if = "1.0"
