--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -26,3 +26,6 @@ validator = { workspace = true }
 itertools = "0.12.0"
 lazy_static = "1.4.0"
 regex = "1.9.1"
+
+[dev-dependencies]
+bulwark-build = { workspace = true }
